[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eulumdat-symmetry"
version = "1.0.0"
description = "Symmetrisation of EULUMDAT (.ldt) photometric files — extension to eulumdat-py."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vincent B.", email = "321soleil@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["eulumdat-py>=1.0.0"]

keywords = ["eulumdat", "ldt", "photometry", "symmetry", "lighting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/123VincentB/eulumdat-symmetry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
